# oxibooru

./: .gitignore  README.md  docker-bake.hcl  docker-compose.yml  flake.nix
client/: Dockerfile  build.js  (+4 more)
server/: .dockerignore  .env  Cargo.toml  Dockerfile  build.rs  config.toml.dist  dev.http  diesel.toml  docker-start.sh  rust-toolchain.toml
server/macros/: Cargo.toml
server/macros/src/: lib.rs
server/migrations/00000000000000_diesel_initial_setup/: up.sql
server/migrations/000_diesel_initial_setup/: down.sql
server/migrations/001_create_users/: down.sql  up.sql
server/migrations/002_create_tags/: down.sql  up.sql
server/migrations/003_create_posts/: down.sql  up.sql
server/migrations/004_create_comments/: down.sql  up.sql
server/migrations/004_create_snapshots/: up.sql
server/migrations/005_create_comments/: up.sql
server/migrations/005_create_pools/: down.sql  up.sql
server/migrations/006_create_indices/: down.sql  up.sql
server/migrations/006_create_pools/: up.sql
server/migrations/007_make_emails_unique/: down.sql  up.sql
server/migrations/008_compress_post_signatures/: down.sql  up.sql
server/migrations/009_nullable_comment_user_id/: down.sql  up.sql
server/migrations/010_database_statistics/: down.sql  up.sql
server/migrations/010_drop_last_edit_time_trigger/: down.sql  up.sql
server/migrations/011_allow_multiple_user_tokens/: down.sql  up.sql
server/migrations/012_use_bigint_primary_keys/: down.sql  up.sql
server/migrations/013_database_statistics/: down.sql  up.sql
server/migrations/014_add_signature_version/: down.sql  up.sql
server/migrations/015_non_nullable_source/: down.sql  up.sql
server/migrations/016_compress_checksums/: down.sql  up.sql
server/migrations/017_name_search_indexes/: down.sql  up.sql
server/migrations/017_post_descriptions/: down.sql  up.sql
server/migrations/019_create_snapshots/: down.sql  up.sql
server/migrations/020_add_user_search_seed/: down.sql  up.sql
server/migrations/021_remove_redundant_index/: down.sql  up.sql
server/migrations/2024-04-25-030646_create_users/: up.sql
server/src/: app.rs  build.rs  config.rs  db.rs  error.rs  extract.rs  filesystem.rs  lib.rs  main.rs  math.rs  model.rs  models.rs  schema.rs  string.rs  test.rs  time.rs  unit.rs  util.rs
server/src/admin/: database.rs  input.rs  mod.rs  post.rs  user.rs
server/src/api/: comment.rs  doc.rs  embeds_api.rs  error.rs  extract.rs  info.rs  legacy.rs  micro.rs  middleware.rs  mod.rs  password_reset.rs  pool.rs  pool_category.rs  post.rs  snapshot.rs  tag.rs  tag_category.rs  upload.rs  user.rs  user_token.rs
server/src/auth/: content.rs  hash.rs  header.rs  mod.rs  password.rs  token.rs
server/src/autotag/: mod.rs
server/src/content/: cache.rs  decode.rs  download.rs  flash.rs  hash.rs  mod.rs  signature.rs  thumbnail.rs  upload.rs
server/src/func/: auth.rs
server/src/image/: hash.rs  mod.rs  read.rs  signature.rs
server/src/math/: cartesian.rs  func.rs  interval.rs  mod.rs  point.rs  rect.rs
server/src/model/: comment.rs  enums.rs  mod.rs  pool.rs  pool_category.rs  post.rs  privilege.rs  rank.rs  snapshot.rs  tag.rs  tag_category.rs  user.rs
server/src/query/: read.rs
server/src/resource/: comment.rs  field.rs  mod.rs  pool.rs  pool_category.rs  post.rs  snapshot.rs  tag.rs  tag_category.rs  user.rs  user_token.rs
server/src/search/: comment.rs  filter.rs  macros.rs  mod.rs  parse.rs  pool.rs  post.rs  preference.rs  preferences.rs  snapshot.rs  tag.rs  temp.rs  user.rs
server/src/snapshot/: mod.rs  pool.rs  pool_category.rs  post.rs  tag.rs  tag_category.rs
server/src/update/: mod.rs  pool.rs  post.rs  tag.rs  user.rs
server/src/web/: help.rs  home.rs  mod.rs  nav.rs  pager.rs  pool.rs  pool_category.rs  post.rs  tag.rs  tag_category.rs
server/static/css/: colors.css  comment-control.css  comment-list-control.css  comment-list-view.css  core-forms.css  core-general.css  expander-control.css  help-view.css  home-view.css  nprogress.css  pager.css  password-reset.css  pool-categories-view.css  pool-input-control.css  pool-list-view.css  pool-view.css  post-content-control.css  post-detail-view.css  post-list-view.css  post-main-view.css  post-notes-overlay-control.css  post-upload.css  snapshots-list-view.css  tag-categories-view.css  tag-input-control.css  tag-list-view.css  tag-view.css  user-list-view.css  user-registration.css  user-view.css
server/templates/: index.html  layout.html
server/templates/pages/: help.html  home.html  pool.html  pools_page.html  post_gallery.html  post_main.html  tag.html  tags_page.html
server/templates/partials/: help_about.html  help_comments.html  help_keyboard.html  help_search.html  help_search_general.html  help_search_pools.html  help_search_posts.html  help_search_tags.html  help_search_users.html  help_tos.html  home_featured_post.html  home_footer.html  manual_pager.html  pool_delete.html  pool_edit.html  pool_merge.html  pool_summary.html  pools_header.html  post_content.html  post_readonly_sidebar.html  posts_header.html  tag_delete.html  tag_edit.html  tag_merge.html  tag_summary.html  tags_header.html  top_navigation.html  user_link.html
server/test/body/comment/: update_restore.json
server/test/body/pool/: create.json
server/test/body/pool_category/: create.json  update_restore.json
server/test/body/post/: update.json  update_restore.json
server/test/images/: tiff.tiff
(+821 files in other folders)
