[package]
name = "server"
version = "0.5.1"
edition = "2024"

[dependencies]
# Using fork until changes are merged in
diesel = { git = "https://github.com/liamw1/diesel-CitextFix", features = ["postgres", "r2d2", "time", "uuid", 
                                                                           "i-implement-a-third-party-backend-and-opt-into-breaking-changes"] }
diesel_migrations = { git = "https://github.com/liamw1/diesel-CitextFix", features = ["postgres"] }
tokio = { version = "1.43.0", features = ["full"] }
axum = { version = "0.8.4", features = ["multipart"] }
tower-http = { version = "0.6.6", features = ["trace", "timeout", "normalize-path"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.217", features = ["derive", "rc"] }
strum = { version = "0.27.0", features = ["derive", "phf"] }
time = { version = "0.3.37", features = ["serde-human-readable"] }
uuid = { version = "1.13.1", features = ["v4", "serde"] }
url = { version = "2.5.4", features = ["serde"] }
compact_str = { version = "0.9.0", features = ["serde"] }
lettre = { version = "0.11.12", features = ["serde"] }
blake3 = { version = "1.5.5", features = ["std", "traits-preview"] }
argon2 = { version = "0.5.3", features = ["std"] }
rayon = "1.10.0"
tower = "0.5.2"
tracing = "0.1.41"
reqwest = "0.12.12"
toml = "0.8.20"
image = "0.25.5"
video-rs = "0.10.3"
swf = "0.2.2"
flate2 = "1.0.35"
hmac = "0.12.1"
md5 = "0.7.0"
base64 = "0.22.1"
percent-encoding = "2.3.1"
hex = "0.4.3"
byteorder = "1.5.0"
regex = "1.11.1"
serde_json = "1.0.138"
serde_regex = "1.1.0"
serde_repr = "0.1.19"
serde_with = "3.12.0"
thiserror = "2.0.11"
num-traits = "0.2.19"
dotenvy = "0.15.7"

[dev-dependencies]
axum-test = "17.3.0"
serial_test = "3.2.0"
